--- a/css/iefonts_attamatic.css
+++ b/css/iefonts_attamatic.css
@@ -13,12 +13,22 @@
 	font-family: quicksand-i4, sans-serif;
 }
 
-#u19718-17,#u19695-4,#u21018-7,#u21034-9,#u15233-6,#u21045-10,#u21119-11,#u19721-29,#u19519-2
+#u19718-17,#u19695-4,#u21018-7,#u21034-9,#u15233-4
 {
 	font-family: quicksand-n4, sans-serif;
 }
 
-#u15062-7,#u15062-9,#u15062-11,#u15233,#u19519-7,#u19519-9,#u19519-14,#u19519-16,#u19519-21,#u19519-23,#u19519-25,#u19519-27,#u19519-29,#u19519-31,#u19519-32
+#u15233
+{
+	font-family: quicksand-n7, sans-serif;
+}
+
+#u21045-10,#u21119-11,#u19721-29,#u19519-2
+{
+	font-family: quicksand-n4, sans-serif;
+}
+
+#u15062-7,#u15062-9,#u15062-11,#u19519-7,#u19519-9,#u19519-14,#u19519-16,#u19519-21,#u19519-23,#u19519-25,#u19519-27,#u19519-29,#u19519-31,#u19519-32
 {
 	font-family: quicksand-n3, sans-serif;
 }
