--- a/css/iefonts_about.css
+++ b/css/iefonts_about.css
@@ -8,12 +8,17 @@
 	font-family: quicksand-n4, sans-serif;
 }
 
-#u7817-7
+#u7817-8
 {
 	font-family: quicksand-n3, sans-serif;
 }
 
-#u24058-29
+#u24148,#u24058-21,#u24058-23
+{
+	font-family: quicksand-n7, sans-serif;
+}
+
+#u24288,#u24287,#u24148-51,#u24058-2,#u24058-4,#u24058-9,#u24058-10,#u24058-11,#u24058-12,#u24058-13,#u24058-14,#u24058-15,#u24058-16,#u24058-17,#u24058-18,#u24058-19,#u24058-29,#u24058-32,#u24058-33,#u24058-35,#u24058-37,#u24058-38,#u24166,#u24208,#u24214,#u24232,#u24238,#u24256,#u24262,#u24220,#u24226,#u24277
 {
 	font-family: quicksand-n4, sans-serif;
 }
